--- a/Stylesheet/style.css
+++ b/Stylesheet/style.css
@@ -2,20 +2,27 @@
    Fonts
 --------- */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+/* ----- Common area ---------------- */
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-/* Header */
+
 
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
-
+/* Header */
 .first-section{
     background-color: darkslateblue;
     display: flex;
     justify-content: center;
     padding-bottom: 50px;
     padding-top: 50px;
+    height: 650px;
 }
 
 .half-width{
@@ -50,22 +57,113 @@ body{
     margin-top: 10px;
     margin-left: 70px;
     padding-right: 140px;
+    transition: 0.5s ease-in;
+}
+.first-section:hover img{
+    transform: scale(1.5);
 }
 
 /* Section 2 area  */
-
+.second-section{
+    margin-top: 100px;
+}
 .player-cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px 30px;
+    
 }
-
 .player-card{
     width: 330px;
-    height: 474px;
-    padding: 15px;
+    height: 490px;
+    padding:15px;
+    box-shadow: 0 0 20px 5px lightgray;
+}
+.player-card img{
+    width:100%;
+}
+.card-text{
+    text-align: justify;
+}
+@media only screen and (max-width:800px){
+    .player-cards{
+        display:grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+/* Contact Form Area */
+
+.contact-section{
+    margin: 100px 0;
+    background-image: url(../resources/images/background.jpg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 2px 0 20px 10px rgb(148, 125, 116);
+    border-radius: 10px;
 }
 
-.player-card img{
-    width: 300px;
-    height: 256px;
+.form{
+    text-align: center;
+    padding-right: 150px;
+    margin-left: -150px;
+}
+
+.form-head{
+    text-align: center;
+    padding-left: 80px;
+    text-decoration: underline;
+    padding-top: 50px;
+}
+
+.form-div-class{
+    box-sizing: border-box;
+    border-radius:30px;
+    margin-top: 40px;
+    margin-bottom: 50px;
+}
+.submit{
+    padding: 5px 20px;
+    background-image: linear-gradient( tomato, rgba(230, 207, 165, 0.993));
+    font-weight: bold;
+    color: whitesmoke;
+    margin-bottom: 20px;
+}
+
+/* Google Maps  */
+
+.google-maps h1{
+    text-align: center;
+    font-size: 46px;
+    margin-bottom: 50px;
+}
+
+/* Footer  */
+
+.footer-image{
+    width: 484px;
+    height: 110px;
+    margin-top: 50px;
+    margin-left: 400px;
+    margin-bottom: 100px;
+}
+
+.links{
+    display: flex;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+    font-size: small;
+}
+
+.fab{
+    padding-left: 10px;
+}
+
+marquee{
+    letter-spacing: 0.5em;
+    border: 3px solid lightgray;
+    padding: 10px 0;
+    font-size: 18px;
 }
